# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  musiikki_kipale copy.txt  musiikki_kipale.txt  pyproject.toml  tasks.py  uusi_musiikki.txt
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti_1  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: arpa.py  index.py  musiikki copy.py  musiikki.py  trie.py  trie_solmu.py
src/tests/: arpa_test.py  musiikki_test.py  ngramit_test.py  trie_test.py
